packages/language/test/fixtures/projects/diagnostics/parse-errors/multiple-errors.siren
# Multiple parse errors in one file (EL001, EL002, EL003)
!!! first error

@@@ second error

task valid-task {}
